# e-commerce

./: .coverage  .gitignore  README.md  class_index.html  function_index.html  index.html  main.py  pyproject.toml  status.json  z_145eef247bfb46b6_models_py.html
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_abstracts_py.html  z_145eef247bfb46b6_exceptions_py.html  z_145eef247bfb46b6_mixins_py.html  z_145eef247bfb46b6_models_py.html  z_145eef247bfb46b6_utils_py.html
scripts/: generate_coverage.py
src/: __init__.py  abstracts.py  exceptions.py  mixins.py  models.py  utils.py
tests/: test_abstraction.py  test_exceptions.py  test_inheritance.py  test_magic_methods.py  test_models.py  test_new_features.py  test_utils.py
