[tool.poetry]
name = "ecommerce-core"
version = "0.1.0"
description = "E-commerce core functionality"

[tool.poetry.dependencies]
python = "^3.8"

[poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^5.0"
pytest-cov = "^4.0"
black = "^22.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 79
target-version = ['py38']